--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-<meta charset="UTF-8">
+eta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Englishword</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<div>
 <p>
 영단어
 </p>
@@ -15,7 +13,8 @@
 <p>뜻</p>
 <input type="text" id="textInputko" onkeydown="checkEnterko(event)">
 <br>
-<div>
+</div>
+<div id="buttonbox">
 <button id="show" onclick="showSavedText()">보기</button>
 <button id="delet" onclick="del()">이전 항목 지우기</button>
 </div>
