--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-eta charset="UTF-8">
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Englishword</title>
 <link rel="stylesheet" type="text/css" href="style.css">
