--- a/index.html
+++ b/index.html
@@ -3,31 +3,26 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Englishword</title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<title>English Words</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button id="theme-switcher" onclick="toggleTheme()">기본모드</button>
+
 <div>
-<p>
-영단어
-</p>
-<input type="text" id="textInput" onkeydown="checkEnter(event)">
-<br>
-<p>뜻</p>
-<input type="text" id="textInputko" onkeydown="checkEnterko(event)">
-<br>
-</div>
-<div id="buttonbox">
-<button id="delet" onclick="del()">이전 항목 지우기</button>
+    <p>영단어</p>
+    <input type="text" id="english-word-input" placeholder="영단어를 입력해주세요" onkeydown="handleEnter(event, 'korean')">
+    <br>
+    <p>뜻</p>
+    <input type="text" id="korean-word-input" placeholder="뜻을 입력해주세요" onkeydown="handleEnter(event, 'save')">
+    <br>
+    <button onclick="saveWord()">저장</button>
+    <button onclick="deleteLastWord()">마지막 단어 지우기</button>
 </div>
 
-<div id="cup">
-<div id="word">
-<p id="savedText"></p>
-</div>
-<div id="mean">
-<p id="savedTextko"></p>
-</div>
+<h2>저장된 단어</h2>
+<div id="word-list">
+    <!-- 저장된 영단어 여기에 -->
 </div>
 
 <script src="main.js"></script>
