--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
             
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
